Updated docker file and docker compose

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint": "eslint src/. test/. --config .eslintrc.json --fix",
     "dev": "nodemon src/",
     "start": "node src/",
-    "jest": "jest  --forceExit"
+    "jest": "jest  --forceExit",
+    "prod": "NODE_ENV=production yarn start"
   },
   "standard": {
     "env": [
