--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,17 @@
 version: "3"
 services:
-  blender-api:
-    container_name: blender-api
-    image: blender-api
-    restart: always
+  db:
+    image: mongo:latest
+    expose:
+      - "27017"
+    volumes:
+      - db_data:/data/db
+  web:
     build: .
     ports:
       - "3030:3030"
     links:
-      - mongo
-  mongo:
-    container_name: mongo
-    image: mongo
-    volumes:
-      - ./data:/data/db
-    ports:
-      - '27017:27017'
+      - db:db
+
+volumes:
+  db_data:     
