--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3"
 services:
   db:
     image: mongo:latest
-    expose:
-      - "27017"
+    ports:
+      - "27018:27017"
     volumes:
       - db_data:/data/db
   web:
