--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@feathersjs/transport-commons": "^4.5.12",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-hooks-common": "^6.1.5",
     "feathers-mongoose": "^8.5.1",
     "helmet": "^4.3.1",
     "mongodb-core": "^3.2.7",
